[package]
name = "ada"
version = "0.1.0"
description = "2D Primitive Shapes Rendering Library"
authors = ["Deepankar Agrawal <deepankar11093@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
categories = []
keywords = ["shape", "2d", "render"]
homepage = "https://github.com/deep110/ada"
repository = "https://github.com/deep110/ada"
documentation = "https://docs.rs/ada"
edition = "2018"
exclude = [
    "examples/*",
]

[dependencies]

[dev-dependencies]
minifb = "0.19.2"
